Add new data set

--- a/A1.md
+++ b/A1.md
@@ -1,19 +1,35 @@
+Dataset link: https://www.kaggle.com/datasets/dansbecker/melbourne-housing-snapshot/data
+
+Goal: 
+The objective of this housing price prediction dataset is to examine the price trends from January 2016 to September 2017, considering various factors such as the number of <u>rooms</u>, <u>distance</u> to the CBD, and <u>building</u> area.
+
+**Audience:** This report is intended for **real estate agents** aiming to optimize their sales strategies, **homebuyers** seeking reasonably priced properties in Melbourne, and **investors** interested in investing luxury mansions while relying on accurate price predictions to make informed decisions.
+
 Dataset name: Housing Price Prediction
 
 Author: HARISH KUMARdatalab
 
 Purpose: This dataset provides key features for predicting house prices, including area, bedrooms, bathrooms, stories, amenities like air conditioning and parking, and information on furnishing status. It enables analysis and modelling to understand the factors impacting house prices and develop accurate predictions in real estate markets.
 
-1. Price: The price of the house. **Numerical**
-2. Area: The total area of the house in square feet. **Numerical**
-3. Bedrooms: The number of bedrooms in the house. **Numerical**
-4. Bathrooms: The number of bathrooms in the house. **Numerical**
-5. Stories: The number of stories in the house. **Numerical**
-6. Mainroad: Whether the house is connected to the main road (Yes/No). **Categorical**
-7. Guestroom: Whether the house has a guest room (Yes/No). **Categorical**
-8. Basement: Whether the house has a basement (Yes/No). **Categorical**
-9. Hot water heating: Whether the house has a hot water heating system (Yes/No). **Categorical**
-10. Airconditioning: Whether the house has an air conditioning system (Yes/No). **Categorical**
-11. Parking: The number of parking spaces available within the house. **Numerical**
-12. Prefarea: Whether the house is located in a preferred area (Yes/No). **Categorical**
-13. Furnishing status: The furnishing status of the house (Fully Furnished, Semi-Furnished, Unfurnished). **Categorical**
+1. Rooms: Number of rooms **Numerical**
+2. Price: Price in dollars **Numerical**
+3. Method: S - property sold; SP - property sold prior; PI - property passed in; PN - sold prior not disclosed; SN - sold not disclosed; NB - no bid; VB - vendor bid; W - withdrawn prior to auction; SA - sold after auction; SS - sold after auction price not disclosed. N/A - price or highest bid not available. **Categorical**
+4. Type: br - bedroom(s); h - house,cottage,villa, semi,terrace; u - unit, duplex; t - townhouse; dev site - development site; o res - other residential. **Categorical**
+5. SellerG: Real Estate Agent **Categorical**
+6. Date: Date sold **Categorical**
+7. Distance: Distance from CBD **Numerical**
+8. Regionname: General Region (West, North West, North, North east …etc) **Categorical**
+9. Propertycount: Number of properties that exist in the suburb. **Numerical**
+10. Bedroom2 : Scraped # of Bedrooms (from different source) **Numerical**
+11. Bathroom: Number of Bathrooms **Numerical**
+12. Car: Number of carspots **Numerical**
+13. Landsize: Land Size **Numerical**
+14. BuildingArea: Building Size **Numerical**
+15. CouncilArea: Governing council for the area **Categorical**
+
+**Insight method:** r7 
+**Insight:** The housing price exhibited a steady increase from January to June 2016, followed by a sharp decline in July. It then rebounded rapidly, reaching 1 million in December 2016. However, the market experienced another notable decline over the next seven months, lasting until July 2017. Despite this downturn, the price surged once again, peaking at 1.2 million in August 2017.
+
+**Grouping:** Grouping is done by setting a bound between 0-400, 400-1000, and 1000~max from the column Landsize. Then label them as Small, Medium, Large, to construct a new column named LandsizeGroup.
+
+Between 2016 and 2017, Melbourne's housing prices experienced notable fluctuations. Most properties were priced between 85k and 3.085M, with houses being the most popular property type. Prices steadily increased from January to June 2016, peaking at nearly 1M before a sharp drop in July. By December 2016, prices rebounded to 1M but declined again over the next seven months, bottoming out in July 2017. Afterward, prices surged to a peak of 1.2M in August 2017. In Metropolitan areas, especially Southern Metropolitan, housing prices were higher and showed significant outliers due to luxury mansions, while Victoria regions exhibited lower prices and greater stability. The data highlights a dynamic market influenced by property type, land size, and location, with distinct contrasts between Metropolitan and Victoria regions.
